--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 洞国的博客
 subtitle: Software is eating the world
-description:
+description: 十年饮冰，难凉热血
 author: Dongguo zhang
 language: zh
 timezone:
